Updated 494 page and links

--- a/404.md
+++ b/404.md
@@ -2,8 +2,10 @@
 layout: default
 title: 404
 permalink: /404.html
+tagline: That page doesn't exist!
 ---
 
-# 404
+It seems you got lost somewhere... Or more likely I did some housekeeping and forgot to update my links - please get in touch if you think I've messed up somewhere!
 
-Sorry, that page doesn't exist!
+[Home](/)
+{: class="top-link" }
