--- a/src/posts/adventures-in-academia/act2021/02.md
+++ b/src/posts/adventures-in-academia/act2021/02.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Adventures in ACTademia
-part: Part One
+part: Part Two
 date: 2021-10-21
 post-tags: [adventures, "applied category theory", conference]
 image: /images/adventures/act002/light.webp
