Messing around with tags

--- a/src/posts/adventures-in-academia/act2021/01.md
+++ b/src/posts/adventures-in-academia/act2021/01.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Adventures in ACTademia
+series: Adventures in ACTademia
+topseries: Adventures in Academia
 subtitle: "Part One"
 date: 2021-10-07
 post-tags: [adventures, "applied category theory", conference]
