--- a/src/posts/adventures-in-academia/act2021/03.md
+++ b/src/posts/adventures-in-academia/act2021/03.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 title: Adventures in ACTademia
+series: Adventures in Academia
 part: Part Three
-tags: [adventures, "applied category theory", conference]
+date: 2021-11-26
 image: /images/adventures/act003/bridge.webp
 alttext: A nice ornate bridge over the River Cam.
 tagline: "My first few days in Cambridge had already proven to be fairly eventful. It was time to relax for the remaining days of my excursion, while observing a plethora of category theory talks."
