Did lots with the new tags system

--- a/src/posts/adventures/act2021/01.md
+++ b/src/posts/adventures/act2021/01.md
@@ -1,15 +1,10 @@
 ---
 layout: post
-title: Adventures in ACTademia
-series: Adventures in ACTademia
-topseries: Adventures in Academia
-subtitle: "Part One"
+part: "Part One"
 date: 2021-10-07
-post-tags: [adventures, "applied category theory", conference]
 image: /images/adventures/act001/fitz.webp
 alt: One of the courtyards inside Fitzwilliam college
 tagline: "One of the first in-person category theory conferences in over a year draws in people from all over the country. Of course, as an avid category theorist, I had to be there."
-disclaimer: ""
 ---
 
 One of the inevitable side-effects of spending eighteen months working from your dining room table while a mild pandemic occurs around you is that everything goes online, and all the conferences stop being in far-flung parts of the world.
