--- a/src/posts/adventures/act2021/03.md
+++ b/src/posts/adventures/act2021/03.md
@@ -1,7 +1,6 @@
 ---
 layout: post
-title: Adventures in ACTademia
-series: Adventures in Academia
+series: Adventures in ACTademia
 part: Part Three
 date: 2021-11-26
 image: /images/adventures/act003/bridge.webp
