Added link to issues page on 404 page

--- a/src/pages/404.md
+++ b/src/pages/404.md
@@ -4,6 +4,8 @@ permalink: /404.html
 tagline: That page doesn't exist!
 ---
 
-It seems you got lost somewhere... Or more likely I did some housekeeping and forgot to update my links - please get in touch if you think I've messed up somewhere!
+It seems you got lost somewhere... Or more likely I did some housekeeping and forgot to update my links.
+
+Please leave an [issue on GitHub](https://github.com/georgejkaye/georgejkaye.github.io/issues) to let me know.
 
 [Home](/)
