Create workflow for compiling tikz to svgs

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -5,9 +5,26 @@ date: 2022-02-18
 tagline: Digital circuits are ubiquitous in today's society. But what if we gave them the categorical treatment?
 ---
 
+## Introduction
+
+Digital circuit
+
+In the business, reasoning with circuits is generally performed by translating them into some sort of automata (such as a Mealy or a Moore machine) and then *simulating* them for some given inputs.
+
+To do this, we must look o
+Circuits are constructed from the basic building blocks of *logic gates*.
+We can then compose these together in a variety of ways to 
+
+If these seem familiar then 
+
+
+## Symmetric traced monoidal categories
+
 ## Syntax
 
-This is ![fcirc.tikz.svg](/images/circuits/blog/fcirc.tikz.svg){.inline-diagram} and
+Ci
+
+This is ![fcirc-noncomb.tikz.svg](/tikz/fcirc-noncomb.tikz.svg){.inline-diagram} and ![fcirc](/tikz/fcirc-traced.tikz.svg){.inline-diagram}
 
 ## Semantics
 
@@ -17,3 +34,6 @@ This is ![fcirc.tikz.svg](/images/circuits/blog/fcirc.tikz.svg){.inline-diagram}
 
 
 ## References
+
+* \[GJ16\] 
+* \[GJL17\]
