Complete adventure in academia 6

--- a/src/posts/adventures/mainline/04.md
+++ b/src/posts/adventures/mainline/04.md
@@ -3,7 +3,7 @@ layout: post
 part: Part Four
 date: 2021-05-13
 image: /images/adventures/004/pie.webp
-alt: A candid shot on the brummie pie shop
+alt: "A candid shot on the brummie pie shop"
 tagline: On a lovely day, Todd and I go in search of a pie.
 ---
 
