--- a/src/posts/adventures/mainline/05.md
+++ b/src/posts/adventures/mainline/05.md
@@ -4,7 +4,7 @@ part: Part Five
 part-title: Stirchley Shenanigans
 date: 2022-01-31
 image: /images/adventures/005/fnc.webp
-alt: A candid shot on the brummie pie shop
+alt: "The fish and chips bag, which is decorated with an anthropomorphic salt shaker and vinegar bottle looking at a grinning fish on a bed of chips. At the bottom of the bag it says 'FRIED TO PERFECTION BY EXPERTS'."
 tagline: Todd and I go for fish and chips.
 ---
 
