Enhance tikz conversion script

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -17,12 +17,15 @@ We can then compose these together in a variety of ways to
 
 If these seem familiar then 
 
-
-## Symmetric traced monoidal categories
-
 ## Syntax
 
-Ci
+
+First we will look at *combinational* circuits.
+These are circuits that act exactly as functions do: one gives them some inputs and they always return the same output, with no concept of delay or feedback.
+Common examples are adders, which are everywhere in circuits!
+
+
+
 
 This is ![fcirc-noncomb.tikz.svg](/tikz/fcirc-noncomb.tikz.svg){.inline-diagram} and ![fcirc](/tikz/fcirc-traced.tikz.svg){.inline-diagram}
 
