--- a/src/posts/research/circuits/01/01.md
+++ b/src/posts/research/circuits/01/01.md
@@ -24,7 +24,14 @@ First we will look at *combinational* circuits.
 These are circuits that act exactly as functions do: one gives them some inputs and they always return the same output, with no concept of delay or feedback.
 Common examples are adders, which are everywhere in circuits!
 
+To build circuits formally, we can use the framework of *freely generated symmetric monoidal categories*.
+These settings are equipped with a set of *generators* that we can then smash together in sequence and parallel.
+Firstly we must specify the components of our circuits.
+Yes I agree
 
+{% defn "Circuit signature" %}
+This is an example definition with a diagram ![fcirc-noncomb.tikz.svg](/tikz/fcirc-noncomb.tikz.svg){.inline-diagram}
+{% enddefn %}
 
 
 This is ![fcirc-noncomb.tikz.svg](/tikz/fcirc-noncomb.tikz.svg){.inline-diagram} and ![fcirc](/tikz/fcirc-traced.tikz.svg){.inline-diagram}
