Continue to improve tikz workflow

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -23,26 +23,26 @@ To construct circuits formally, we can model them as morphisms (or *terms*) in a
 Rather than using the traditional method of writing terms as one-dimensional text strings, we will use the graphical syntax of *string diagrams* \[JS81, Sel10\].
 Not only does this make things a lot clearer, it has a practical benefit in that it can eliminate a lot of structural bureaucracy, such as having to deal with associativity all the time.
 
-In string diagrams, a morphism $F : X \to Y$ is drawn as a box ![](/tikz/fcirc-labelled.tikz.svg).
+In string diagrams, a morphism $F : X \to Y$ is drawn as a box {% tikz "fcirc-labelled" %}.
 The graphical notation lends itself well to the various categorical operations and constructs: composition, tensor, the identity and the symmetry are illustrated below.
 
 {% figure %}
-![](/tikz/seq.tikz.svg)
-![](/tikz/par.tikz.svg)
-![](/tikz/id-labelled.tikz.svg)
-![](/tikz/sym-labelled.tikz.svg)
+{% tikz "seq" %}
+{% tikz "par" %}
+{% tikz "id-labelled" %}
+{% tikz "sym-labelled" %}
 {% endfigure %}
 
 Since we want to construct circuits of arbitrary size, our category will need to be *freely generated* over some set of *generators*.
 These generators are the basic building blocks of terms in our category
 
-In general, we can view a generator (or a composite term) ![](/tikz/fcirc-labelled.tikz.svg) as a process that takes an input of type $X$ and produces an output of type $Y$.
+In general, we can view a generator (or a composite term) {% tikz "fcirc-labelled" %} as a process that takes an input of type $X$ and produces an output of type $Y$.
 But in our case we need not be so general!
 When considering circuits, the input and output types simply correspond to the number of open wires, so we can let the types be natural numbers.
 An SMC with natural numbers as objects is called a *products and permutations category*, or *prop* for short.
 A nice byproduct of this is that we can write a morphism $m \to n$ as a box with $m$ input wires and $n$ output wires, and drop the wire labels.
 
-When drawing boxes with multiple wires, we will often compress them into a single wires like ![](/tikz/fcirc.tikz.svg), but the actual number should be clear from context.
+When drawing boxes with multiple wires, we will often compress them into a single wires like {% tikz "fcirc" %}, but the actual number should be clear from context.
 
 ### Circuit signatures
 
@@ -54,7 +54,7 @@ We begin by specifying the generators: the components that we can plug together.
 {% enddefn %}
 
 {% ex %}
-    Throughout this series we will $\Sigma_\star = (V, G)$ where $V = \{\mathsf{t},\mathsf{f}\}$ and $G = \{(\text{AND},2),(\text{OR},2),(\text{NOT},2)\}$.
+    Throughout this series we will use $\Sigma_\star = (V, G)$ where $V = \{\mathsf{t},\mathsf{f}\}$ and $G = \{(\text{AND},2),(\text{OR},2),(\text{NOT},2)\}$.
 {% endex %}
 
 ### Combinational circuits
@@ -64,8 +64,14 @@ These are circuits that act exactly as functions do: one gives them some inputs 
 Common examples are adders, which are everywhere in circuits!
 
 {% defn %}
-    Let $\mathbf{Circ}_{\Sigma}$ be the symmetric monoidal category generated freely over a circuit signature $\Sigma$.
+    Let $\mathbf{Circ}_{\Sigma}$ be the symmetric monoidal category generated freely over generators
+    {% figure %}
+        {% tikz "" %}
+    {% endfigure %}
+    
 {% enddefn %}
+
+
 
 
 ## Semantics
