Finish writing first draft of syntax section

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -23,61 +23,77 @@ To construct circuits formally, we can model them as morphisms (or *terms*) in a
 Rather than using the traditional method of writing terms as one-dimensional text strings, we will use the graphical syntax of *string diagrams* \[JS81, Sel10\].
 Not only does this make things a lot clearer, it has a practical benefit in that it can eliminate a lot of structural bureaucracy, such as having to deal with associativity all the time.
 
-In string diagrams, a morphism $F : X \to Y$ is drawn as a box {% tikz "strings/category/f.caps.types" %}.
-The graphical notation lends itself well to the various categorical operations and constructs: composition, tensor, the identity and the symmetry are illustrated below.
+Constructing circuits is simply a matter of getting a load of gates and bashing them together.
+The categorical parallel of this is a *freely generated symmetric monoidal category*.
+In this setting, we have a set of *generators*: these are our basic building blocks.
+
+In the context of digital circuits there are some obvious choices of generators.
+The logic gates are
+
+The signals (or *values*) in circuits must also be modelled as generators.
+Of course, there are the traditional values of *true* (high) and *false* (low).
+We will also use two special values: a *disconnected wire* and a *short circuit*. 
 
 {% figure %}
-{% tikz "strings/category/composition.caps.types" %}
-{% tikz "strings/monoidal/tensor.caps.types" %}
-{% tikz "strings/category/identity.types" %}
-{% tikz "strings/symmetric/symmetry.types" %}
+    {% tikz "circuits/components/gates/and" %}
+    {% tikz "circuits/components/gates/or" %}
+    {% tikz "circuits/components/gates/not" %}
+    {% tikz "circuits/components/values/true" %}
+    {% tikz "circuits/components/values/false" %}
+    {% tikz "strings/monoids/discard-r" %}
+    {% tikz "strings/monoids/discard-r-white" %}
 {% endfigure %}
 
-Since we want to construct circuits of arbitrary size, our category will need to be *freely generated* over some set of *generators*.
-These generators are the basic building blocks of terms in our category
+All circuits all share some common *structural* generators.
+We can *fork* wires, *stub* redundant ones, or *join* them together.
+Finally we can extend wires an *identity*, or swap them over with a *symmetry*.
 
-{% tikz "circuits/components/gates/and" %}
+{% figure %}
+    {% tikz "strings/monoids/copy-lr" %}
+    {% tikz "strings/monoids/discard-l" %}
+    {% tikz "strings/monoids/copy-rl" %}
+    {% tikz "strings/category/identity" %}
+    {% tikz "strings/symmetric/symmetry" %}
+{% endfigure %}
 
 
-In general, we can view a generator (or a composite term) {% tikz "strings/category/f.caps.types" %} as a process that takes an input of type $X$ and produces an output of type $Y$.
-But in our case we need not be so general!
-When considering circuits, the input and output types simply correspond to the number of open wires, so we can let the types be natural numbers.
-An SMC with natural numbers as objects is called a *products and permutations category*, or *prop* for short.
-A nice byproduct of this is that we can write a morphism $m \to n$ as a box with $m$ input wires and $n$ output wires, and drop the wire labels.
+On their own these generators aren't very interesting, but we can put them together horizontally (*composition*) or vertically (*tensor*) to create bigger circuits.
+We write {% tikz "strings/category/f.caps" %} with capital letters to represent composite morphisms constructed in this way.
+
+{% figure %}
+    {% tikz "strings/category/composition.caps" %}
+    {% tikz "strings/monoidal/tensor.caps" %}
+{% endfigure %}
 
 When drawing boxes with multiple wires, we will often compress them into a single wires like {% tikz "circuits/components/fcirc" %}, but the actual number should be clear from context.
 
-### Circuit signatures
+### Delay and feedback
 
-Now it is time to actually start defining our category of digital circuits.
-We begin by specifying the generators: the components that we can plug together.
-
-{% defn "Circuit signature" %}
-    A circuit signature is a tuple $\Sigma = (\mathcal{V},\mathcal{G})$ where $\mathcal{V}$ is a finite set of *values* and $\mathcal{G}$ is a finite set of *gates* with associated arities.
-{% enddefn %}
-
-{% ex %}
-    Throughout this series we will use $\Sigma_\star = (V, G)$ where $V = \{\mathsf{t},\mathsf{f}\}$ and $G = \{(\text{AND},2),(\text{OR},2),(\text{NOT},2)\}$.
-{% endex %}
-
-### Combinational circuits
-
-First we will look at *combinational* circuits.
-These are circuits that act exactly as functions do: one gives them some inputs and they always return the same output, with no concept of delay or feedback.
-Common examples are adders, which are everywhere in circuits!
-
-{% defn %}
-    Let $\mathbf{Circ}_{\Sigma}$ be the symmetric monoidal category generated freely over generators
-    {% figure %}
-    {% endfigure %}
-    
-{% enddefn %}
+By composing the generators in the previous section together in various ways you can create all sorts of circuits.
+But there is one crucial property they all share: these are *combinational circuits*, circuits that act as functions on their inputs, always producing the same outputs given the same inputs.
 
 
+What makes circuits interesting is the inclusion of *delay* and *feedback*.
+These are what are known as *sequential circuits*.
 
+Representing delay is easy: we can add an additional generator:
+
+{% figure %}
+    {% tikz "circuits/components/delay" %}
+{% endfigure %}
+
+For feedback we need to add another operation to our framework: a *trace operator*.
+This connects some of the outputs of a circuit back to its inputs.
+
+{% figure %}
+    {% tikz "strings/traced/trace-lhs-rhs" %}
+{% endfigure %}
 
 ## Semantics
 
+So far circuits have only been constructed *syntactically*: they have no associated computation behaviour.
+While this means you can make some very pretty string diagrams, it does mean they are otherwise completely useless.
+To add *semantics* to our circuits, first we must interpret the signature in some domain.
 
 
 ## Combinational feedback
