Add discussion about values

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -17,8 +17,27 @@ We can then compose these together in a variety of ways to
 
 If these seem familiar then 
 
+## Modelling circuits
+
+Before we can get stuck in to building our circuits, we must discuss the model we will use.
+Traditionally, when reasoning about digital circuits, signals can be *high* ('true'), written $\mathsf{t}$ or *low* ('false'), written $\mathsf{f}$.
+These signals are then fed to logic gates and computations can be performed.
+
+However, for more complex analysis on circuits with delay and feedback these signals are not enough!
+For this reason, we will also add two more signals, $\bot$ and $\top$, yielding [Belnap's four-valued logic](https://en.wikipedia.org/wiki/Four-valued_logic#Belnap).
+Intuitively, the $\bot$ signal represents a *disconnected wire*, and the $\top$ signal a *short circuit*.
+
+The four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$ can form a lattice in two different ways.
+The first 
+
+
+
+
+
+
 ## Syntax
 
+With the various signals at play under our belt, we can get to the fun stuff.
 To construct circuits formally, we can model them as morphisms (or *terms*) in a *symmetric monoidal category*.
 Rather than using the traditional method of writing terms as one-dimensional text strings, we will use the graphical syntax of *string diagrams* \[JS81, Sel10\].
 Not only does this make things a lot clearer, it has a practical benefit in that it can eliminate a lot of structural bureaucracy, such as having to deal with associativity all the time.
@@ -27,12 +46,11 @@ Constructing circuits is simply a matter of getting a load of gates and bashing 
 The categorical parallel of this is a *freely generated symmetric monoidal category*.
 In this setting, we have a set of *generators*: these are our basic building blocks.
 
-In the context of digital circuits there are some obvious choices of generators.
+In the context of digital circuits there are some obvious choices of 
+generators.
 The logic gates are
-
-The signals (or *values*) in circuits must also be modelled as generators.
-Of course, there are the traditional values of *true* (high) and *false* (low).
-We will also use two special values: a *disconnected wire* and a *short circuit*. 
+The signals in our circuits must also have corresponding generators: these are drawn on the right.
+The $\bot$ and $\top$ generators have special symbols to reflect their status.
 
 {% figure %}
     {% tikz "circuits/components/gates/and" %}
