Flesh out signals section

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -27,14 +27,32 @@ However, for more complex analysis on circuits with delay and feedback these sig
 For this reason, we will also add two more signals, $\bot$ and $\top$, yielding [Belnap's four-valued logic](https://en.wikipedia.org/wiki/Four-valued_logic#Belnap).
 Intuitively, the $\bot$ signal represents a *disconnected wire*, and the $\top$ signal a *short circuit*.
 
-The four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$ can form a lattice in two different ways.
-The first 
+The four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$ form two lattices which are of interest to us:
+
+{% figure %}
+{% tikz "circuits/lattices" %}
+{% endfigure %}
 
 
+The first lattice (**A4**, $\sqsubseteq$) is the *approximation lattice*.
+In this lattice, the bottom element $\bot$ represents a *lack* of data, and the top element $\top$ represents a *glut* of data: both signals at once.
+The $\mathsf{t}$ and $\mathsf{f}$ values sit in the middle, since they carry one piece of information.
+The join in this lattice $\sqcup$ determines the result of joining two wires together.
+For example, $\mathsf{t} \sqcup \mathsf{f}$ would result in $\top$: both pieces of information at once.
 
+The second lattice (**L4**, $\leq$) is the *logical lattice*, which deals with how much 'truth' there is in a signal.
+The lattice determines how we can derive logical operations.
+For example, AND is the join $\wedge$ in **L4** and OR is the meet $\vee$.
+The complete truth tables are drawn below:
 
+$\wedge$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\vee$ |  $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\neg$ | |
+:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:
+$\bot$ | $\bot$ | $\bot$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\bot$ | $\bot$ | $\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | | $\bot$ | $\bot$
+$\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{t}$ |  $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | | $\mathsf{t}$ | $\mathsf{f}$ |
+$\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\mathsf{f}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{f}$ | $\mathsf{t}$
+$\top$ | $\mathsf{f}$ | $\top$ | $\mathsf{f}$ | $\top$ | | $\top$ | $\mathsf{t}$ | $\mathsf{t}$ | $\top$ | $\top$ | | $\top$ | $\top$
 
-
+Note that all the usual logical identities ($\mathsf{f} \wedge x = \mathsf{f}$, $\mathsf{t} \wedge x = x$ etc) still hold in the four-value case.
 ## Syntax
 
 With the various signals at play under our belt, we can get to the fun stuff.
