Continue writing circuits post

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -16,43 +16,6 @@ Circuits are constructed from the basic building blocks of *logic gates*.
 We can then compose these together in a variety of ways to 
 
 If these seem familiar then 
-
-## Modelling circuits
-
-Before we can get stuck in to building our circuits, we must discuss the model we will use.
-Traditionally, when reasoning about digital circuits, signals can be *high* ('true'), written $\mathsf{t}$ or *low* ('false'), written $\mathsf{f}$.
-These signals are then fed to logic gates and computations can be performed.
-
-However, for more complex analysis on circuits with delay and feedback these signals are not enough!
-For this reason, we will also add two more signals, $\bot$ and $\top$, yielding [Belnap's four-valued logic](https://en.wikipedia.org/wiki/Four-valued_logic#Belnap).
-Intuitively, the $\bot$ signal represents a *disconnected wire*, and the $\top$ signal a *short circuit*.
-
-The four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$ form two lattices which are of interest to us:
-
-{% figure %}
-{% tikz "circuits/lattices" %}
-{% endfigure %}
-
-
-The first lattice (**A4**, $\sqsubseteq$) is the *approximation lattice*.
-In this lattice, the bottom element $\bot$ represents a *lack* of data, and the top element $\top$ represents a *glut* of data: both signals at once.
-The $\mathsf{t}$ and $\mathsf{f}$ values sit in the middle, since they carry one piece of information.
-The join in this lattice $\sqcup$ determines the result of joining two wires together.
-For example, $\mathsf{t} \sqcup \mathsf{f}$ would result in $\top$: both pieces of information at once.
-
-The second lattice (**L4**, $\leq$) is the *logical lattice*, which deals with how much 'truth' there is in a signal.
-The lattice determines how we can derive logical operations.
-For example, AND is the join $\wedge$ in **L4** and OR is the meet $\vee$.
-The complete truth tables are drawn below:
-
-$\wedge$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\vee$ |  $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\neg$ | |
-:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:
-$\bot$ | $\bot$ | $\bot$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\bot$ | $\bot$ | $\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | | $\bot$ | $\bot$
-$\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{t}$ |  $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | | $\mathsf{t}$ | $\mathsf{f}$ |
-$\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\mathsf{f}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{f}$ | $\mathsf{t}$
-$\top$ | $\mathsf{f}$ | $\top$ | $\mathsf{f}$ | $\top$ | | $\top$ | $\mathsf{t}$ | $\mathsf{t}$ | $\top$ | $\top$ | | $\top$ | $\top$
-
-Note that all the usual logical identities ($\mathsf{f} \wedge x = \mathsf{f}$, $\mathsf{t} \wedge x = x$ etc) still hold in the four-value case.
 ## Syntax
 
 With the various signals at play under our belt, we can get to the fun stuff.
@@ -64,11 +27,12 @@ Constructing circuits is simply a matter of getting a load of gates and bashing 
 The categorical parallel of this is a *freely generated symmetric monoidal category*.
 In this setting, we have a set of *generators*: these are our basic building blocks.
 
-In the context of digital circuits there are some obvious choices of 
-generators.
-The logic gates are
-The signals in our circuits must also have corresponding generators: these are drawn on the right.
-The $\bot$ and $\top$ generators have special symbols to reflect their status.
+Clearly, our logic gates make up one class of generators in digital circuits.
+Another class we must include are the *values* that signals can take in our circuits.
+In the categorical model these are generators $0 \to 1$.
+An obvious choice is *true* ($\mathsf{t}$) and *false* ($\mathsf{f}$).
+We also augment this with two 'special' values: a disconnected wire ($\bot$) and a short circuit ($\top$), and they have special drawings as shown below.
+The reasoning behind these two values and their special status will become apparent later!
 
 {% figure %}
     {% tikz "circuits/components/gates/and" %}
@@ -80,9 +44,9 @@ The $\bot$ and $\top$ generators have special symbols to reflect their status.
     {% tikz "strings/monoids/discard-r-white" %}
 {% endfigure %}
 
-All circuits all share some common *structural* generators.
+So our circuits are not just a load of linear circuits plonked in a line consecutively, we also require some common *structural* generators.
 We can *fork* wires, *stub* redundant ones, or *join* them together.
-Finally we can extend wires an *identity*, or swap them over with a *symmetry*.
+Finally we can extend wires with an *identity*, or swap them over with a *symmetry*.
 
 {% figure %}
     {% tikz "strings/monoids/copy-lr" %}
@@ -125,12 +89,78 @@ This connects some of the outputs of a circuit back to its inputs.
     {% tikz "strings/traced/trace-lhs-rhs" %}
 {% endfigure %}
 
+This turns our category of digital circuits into a *symmetric traced monoidal category*, or STMC.
+There are four axioms of STMCs, all of which are clear from the string diagram notation:
+
+{% figure %}
+    {% tikz "strings/traced/sliding" %}
+    {% tikz "strings/traced/superposing" %}
+{% endfigure %}
+
+{% figure %}
+    {% tikz "strings/traced/naturality" %}
+    {% tikz "strings/traced/yanking" %}
+{% endfigure %}
+
+
+
+{% remark %}
+    Another common categorical framework for modelling circuit-like structures (such as [electrical circuits](https://arxiv.org/abs/2106.07763) or [signal flow graphs](https://www.ioc.ee/~pawel/papers/popl15.pdf)) is that of a *compact closed category*.
+    These settings are equipped with 'cups and caps' that can be used to 'bend' wires.
+    {% figure %}
+        {% tikz "strings/compact-closed/cup" %}
+        {% tikz "strings/compact-closed/cap" %}
+    {% endfigure %}
+
+    However, this is not suitable for the setting of digital circuits as wires effectively become *bidirectional*: using the cup and the cap one can connect outputs to outputs and inputs to inputs.
+    Clearly this is not a good model for digital circuits!
+
+    Nevertheless, the two settings are intricately linked.
+    Every compact closed category is equipped with a *canonical trace* by building one from cups and caps, and from a traced category one can use the *Int-construction* to obtain a compact closed category.
+    You can find out more in this [nlab article](https://ncatlab.org/nlab/show/traced+monoidal+category#RelationToCompactClosedCategories).
+
+{% endremark %}
+
 ## Semantics
 
-So far circuits have only been constructed *syntactically*: they have no associated computation behaviour.
-While this means you can make some very pretty string diagrams, it does mean they are otherwise completely useless.
-To add *semantics* to our circuits, first we must interpret the signature in some domain.
+While we can now make some very pretty string diagrams, our work so far is otherwise completely useless: there is no *computational content* to our circuits.
+To add *semantics*, first we must interpret our gates and values in some domain.
 
+As we have seen before, we have more than just the classic true and false values.
+We also have $\bot$, which can be thought of as carrying no 
+[Nuel Belnap](https://en.wikipedia.org/wiki/Nuel_Belnap) proposed a four-valued logic, suggesting that 'this is how a computer should think', in which the four values form two lattices and operations are monotone functions.
+This corresponds exactly to our four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$.
+
+We can take inspiration from this and can interpret the values  as elements of a *lattice*: a poset in which every two elements have a unique supremum (or *join*) and minimum (or *meet*).
+The four values form two lattices which are of interest to us.
+
+{% figure %}
+{% tikz "circuits/lattices" %}
+{% endfigure %}
+
+The first lattice (**A4**, $\sqsubseteq$) is the *approximation lattice*.
+In this lattice, the bottom element $\bot$ represents a *lack* of data, and the top element $\top$ represents a *glut* of data: both signals at once.
+The $\mathsf{t}$ and $\mathsf{f}$ values sit in the middle, since they carry one piece of information.
+The join in this lattice $\sqcup$ determines the result of joining two wires together.
+For example, $\mathsf{t} \sqcup \mathsf{f}$ would result in $\top$: both pieces of information at once.
+
+The second lattice (**L4**, $\leq$) is the *logical lattice*, which deals with how much 'truth' there is in a signal.
+The lattice determines how we can derive logical operations.
+For example, AND is the join $\wedge$ in **L4** and OR is the meet $\vee$.
+The complete truth tables are drawn below:
+
+$\wedge$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\vee$ |  $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\neg$ | |
+:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:|:-:
+$\bot$ | $\bot$ | $\bot$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\bot$ | $\bot$ | $\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | | $\bot$ | $\bot$
+$\mathsf{t}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{t}$ |  $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | $\mathsf{t}$ | | $\mathsf{t}$ | $\mathsf{f}$ |
+$\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | $\mathsf{f}$ | | $\mathsf{f}$ | $\bot$ | $\mathsf{t}$ | $\mathsf{f}$ | $\top$ | | $\mathsf{f}$ | $\mathsf{t}$
+$\top$ | $\mathsf{f}$ | $\top$ | $\mathsf{f}$ | $\top$ | | $\top$ | $\mathsf{t}$ | $\mathsf{t}$ | $\top$ | $\top$ | | $\top$ | $\top$
+
+Note that all the usual logical identities ($\mathsf{f} \wedge x = \mathsf{f}$, $\mathsf{t} \wedge x = x$ etc) still hold in the four-value case.
+
+
+When considering semant
+The semantics of circuits is that of *monotone stream functions*: 
 
 ## Combinational feedback
 
