Add narrative link between belnap and four values

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -127,19 +127,18 @@ While we can now make some very pretty string diagrams, our work so far is other
 To add *semantics*, first we must interpret our gates and values in some domain.
 
 As we have seen before, we have more than just the classic true and false values.
-We also have $\bot$, which can be thought of as carrying no 
-[Nuel Belnap](https://en.wikipedia.org/wiki/Nuel_Belnap) proposed a four-valued logic, suggesting that 'this is how a computer should think', in which the four values form two lattices and operations are monotone functions.
-This corresponds exactly to our four values $\bot$, $\mathsf{t}$, $\mathsf{f}$ and $\top$.
-
-We can take inspiration from this and can interpret the values  as elements of a *lattice*: a poset in which every two elements have a unique supremum (or *join*) and minimum (or *meet*).
-The four values form two lattices which are of interest to us.
+We also have $\bot$, which can be thought of as carrying no signal at all, and $\top$, which is like 'both signals at once'.
+These two additional values were actually proposed many decades ago by [Nuel Belnap](https://en.wikipedia.org/wiki/Nuel_Belnap) in his [four-valued logic](https://en.wikipedia.org/wiki/Four-valued_logic#Belnap).
+In his system, the four values form two lattices and operations are monotone functions.
+Recall that a *lattice* is a poset in which every two elements have a unique supremum (or *join*) and minimum (or *meet*).
+The two lattice are then as shown below:
 
 {% figure %}
 {% tikz "circuits/lattices" %}
 {% endfigure %}
 
-The first lattice (**A4**, $\sqsubseteq$) is the *approximation lattice*.
-In this lattice, the bottom element $\bot$ represents a *lack* of data, and the top element $\top$ represents a *glut* of data: both signals at once.
+The first lattice (**A4**, $\sqsubseteq$) is the *approximation lattice*, corresponding to how much 'information' is contained in each signal.
+As we have establish, the bottom element $\bot$ represents a *lack* of data, and the top element $\top$ represents a *glut* of data.
 The $\mathsf{t}$ and $\mathsf{f}$ values sit in the middle, since they carry one piece of information.
 The join in this lattice $\sqcup$ determines the result of joining two wires together.
 For example, $\mathsf{t} \sqcup \mathsf{f}$ would result in $\top$: both pieces of information at once.
