Rebase onto latest develop

--- a/src/posts/research/circuits/01.md
+++ b/src/posts/research/circuits/01.md
@@ -29,7 +29,7 @@ In this setting, we have a set of *generators*: these are our basic building blo
 
 Clearly, our logic gates make up one class of generators in digital circuits.
 Another class we must include are the *values* that signals can take in our circuits.
-In the categorical model these are generators $0 \to 1$.
+In the categorical model these are generators $0 \to 1$.*i*
 An obvious choice is *true* ($\mathsf{t}$) and *false* ($\mathsf{f}$).
 We also augment this with two 'special' values: a disconnected wire ($\bot$) and a short circuit ($\top$), and they have special drawings as shown below.
 The reasoning behind these two values and their special status will become apparent later!
