--- a/src/pages/lg23.md
+++ b/src/pages/lg23.md
@@ -20,7 +20,16 @@ First make sure the big television screen is on (it often already is).
 
 ![Controls for the screen in LG23: the 'Display > ON' button is illuminated.](/images/lg23/screen-controls.jpg)
 
-Start by pressing 'Join' on the zoom terminal:
+If it's not on, try pressing the 'ON' button on the control panel to see if that shocks the screen into life.
+If this isn't successful, don't panic: try pressing the power button on the bottom of the screen,
+and make sure the screen is powered on (the plug is directly beneath it).
+
+If the screen is on, it should show a nice picture of Chancellor's Court
+If it just says 'no signal', this means that someone's messed around with it; there should be an
+HDMI cable behind the screen that connects the bottom HDMI port to the underside of a box
+on the wall, which should have some flashing ethernet lights on it.
+
+Once you're satisfied that everything is good, start by pressing 'Join' on the zoom terminal:
 
 ![The initial screen of the zoom terminal: there are three buttons for 'New meeting, 'Join' and 'Share Content.](/images/lg23/join-call.jpg)
 
