--- a/src/pages/lg23.md
+++ b/src/pages/lg23.md
@@ -24,7 +24,7 @@ If it's not on, try pressing the 'ON' button on the control panel to see if that
 If this isn't successful, don't panic: try pressing the power button on the bottom of the screen,
 and make sure the screen is powered on (the plug is directly beneath it).
 
-If the screen is on, it should show a nice picture of Chancellor's Court
+If the screen is on, it should show a nice picture of Chancellor's Court.
 If it just says 'no signal', this means that someone's messed around with it; there should be an
 HDMI cable behind the screen that connects the bottom HDMI port to the underside of a box
 on the wall, which should have some flashing ethernet lights on it.
@@ -59,13 +59,9 @@ Don't forget to unmute when the talk starts!
 There are two options: the speaker can either use their own laptop or the conventional computer to present.
 If using the latter, you'll need to log on using your university credentials.
 The process is otherwise the same for both: connect to the zoom call using the above details and then the speaker can screenshare.
-There is a 'smart' webcam that can follow the speaker around the room: just use the silver USB cable.
-(Hopefully the speaker has a USB-A port or appropriate dongle: the former are few and far between these days!)
-
-![My hand holds up a silver usb cable.](/images/lg23/webcam.jpg)
 
 Now you can make sure the speaker is screen sharing correctly and that they can change slides and so on.
-Once this is done, the 'speaker thumbnail' in the corner of the screen needs to be disabled, as it can get in the way for the physical participants.
+Once this is done, the 'speaker thumbnail' in the corner of the screen needs to be disabled, as it can get in the way of the slides for the physical participants.
 To do this, select 'View' from the meeting controls:
 
 ![The zoom terminal shows the meeting controls, with 'View' circled.](/images/lg23/controls-view.jpg)
