[cont] Reword lg23 cable box stuff

--- a/src/pages/lg23.md
+++ b/src/pages/lg23.md
@@ -25,14 +25,16 @@ If this isn't successful, don't panic: try pressing the power button on the bott
 and make sure the screen is powered on (the plug is directly beneath it).
 
 If the screen is on, it should show a nice picture of Chancellor's Court.
-If it just says 'no signal', this means that someone's messed around with it; there should be an
-HDMI cable behind the screen that connects the bottom HDMI port to the underside of a box
-on the wall, which should have some flashing ethernet lights on it.
+If it just says 'no signal', this means that someone's messed around with it and
+unplugged something.
+The video data from the zoom computer comes from a box on the wall behind the
+screen with some flashing ethernet lights on it.
+Connect an HDMI cable from the HDMI1 port on the back of the screen (hopefully
+one is still plugged in!) to the HDMI port on the underside of this box.
 
 Once you're satisfied that everything is good, start by pressing 'Join' on the zoom terminal:
 
 ![The initial screen of the zoom terminal: there are three buttons for 'New meeting, 'Join' and 'Share Content.](/images/lg23/join-call.jpg)
-
 
 ![The zoom terminal with the 'Join meeting' dialog opened, the meeting ID box is active.](/images/lg23/join-meeting.jpg)
 
